[package]
name = "introduction-pods"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
anyhow = "1.0.56"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2" }
base64 = "0.22.1"
num = { version = "0.4.0", default-features = false }

pod2 = { git="https://github.com/0xPARC/pod2", branch="expose-interfaces" }
plonky2_ed25519 = {git = "https://github.com/ainta/plonky2-ed25519"}
ssh-key = { version = "0.6.7", features = ["ed25519"] }




[features]
default = []
metrics = ["pod2/metrics"]
time = ["pod2/time"]
