[package]
name = "introduction-pods"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
anyhow = "1.0.56"
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2" }
base64 = "0.22.1"

serde = "1.0.219"
serde_json = "1.0.140"

# we use a specific commit to avoid breaking changes in the interfaces, updating
# to latest pod2 version from time to time.
pod2 = { git="https://github.com/0xPARC/pod2", rev="0541817116b3d45e88f3f9965877f24791e7f298" }

# EcdsaPod specific dependencies:
plonky2_ecdsa = {git = "https://github.com/ainta/plonky2-ecdsa"}
num = { version = "0.4.0", default-features = false }
plonky2_ed25519 = {git = "https://github.com/ainta/plonky2-ed25519"}
ssh-key = { version = "0.6.7", features = ["ed25519"] }
plonky2_sha256 = { git = "https://github.com/ainta/plonky2-sha256" }
plonky2_u32 = { git = "https://github.com/ax0/plonky2-u32" }

serde_cbor    = "0.11"
p256          = { version = "0.13.2", features = ["ecdsa", "pkcs8"] }
generic-array = "0.13"                  # for 32-byte arrays
x509-parser   = "0.16"
pem           = "3"                     # tiny PEM helper
sha2          = "0.10"
typenum       = "1"


[features]
default = []
metrics = ["pod2/metrics"]
time = ["pod2/time"]
